add new calendar layout

--- a/index.html
+++ b/index.html
@@ -13,10 +13,14 @@
 
 <body>
     <div class="main-container">
+        <div class="week-header">This Week</div>
         <div class="week-schedule-container">
             <div class="week-section" id="this-week-container">
                 <!-- This Week's schedule data will be populated here by JavaScript -->
             </div>
+        </div>
+        <div class="week-header">Next Week</div>
+        <div class="week-schedule-container">
             <div class="week-section" id="next-week-container">
                 <!-- Next Week's schedule data will be populated here by JavaScript -->
             </div>
